gccida/c2/copy_loop_headers
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:590:4: error: expected ';' after expression
rtx nonnote_insn; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:590:5: error: use of undeclared identifier 'nonnote_insn'
rtx nonnote_insn; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:591:4: error: expected ';' after expression
rtx v5; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:591:5: error: use of undeclared identifier 'v5'
rtx v5; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:592:4: error: expected ';' after expression
rtx v6; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:592:5: error: use of undeclared identifier 'v6'
rtx v6; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:602:6: error: use of undeclared identifier 'v16'
rtx *v16; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:603:4: error: expected ';' after expression
rtx v17; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:603:5: error: use of undeclared identifier 'v17'
rtx v17; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:604:6: error: use of undeclared identifier 'v18'
rtx *v18; // r14 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:612:4: error: expected ';' after expression
rtx v26; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:612:5: error: use of undeclared identifier 'v26'
rtx v26; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:614:4: error: expected ';' after expression
rtx v28; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:614:5: error: use of undeclared identifier 'v28'
rtx v28; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:617:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v31; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:621:4: error: expected ';' after expression
rtx v35; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:621:5: error: use of undeclared identifier 'v35'
rtx v35; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:634:4: error: expected ';' after expression
rtx v48; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/jump.c:634:5: error: use of undeclared identifier 'v48'
rtx v48; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/copy_loop_headers/src/obj/jump.o] Error 1
